fixed overlapping footer

--- a/CMSC495/bug_tracker/static/css/base.css
+++ b/CMSC495/bug_tracker/static/css/base.css
@@ -1,5 +1,5 @@
 footer {
-    position: fixed;
+    position: relative;
     padding: 10px 10px 20px 10px;
     bottom: 0;
     width: 100%;
